Ophidian civilization, Resphain and Sethicus

--- a/Characters/MortalCharacters.tex
+++ b/Characters/MortalCharacters.tex
@@ -2635,8 +2635,22 @@ She knew if she tried to think like a \dragon it would destroy her.
 
 
 
+\subsubsection{Happiness}
+\Criseis was fairly happy because she had a special talent for inner peace. 
+She said that she had met very few people who had her talent\her \emph{serenity}, as she called it.
+
+She had read \Sethicus's warnings, and she suspected that the great polymath might have had the talent. 
+But no other \dragon appeared to share it. 
+Certainly not \Iscrafel or \Secherdamon or \Nzessuacrith. 
+
+
+
+
+
 \subsubsection{Role}
-At times, she will defend her lord against verbal attacks from others. \ta{You know nothing of my lord. 
+At times, she will defend her lord against verbal attacks from others. 
+\ta{%
+  You know nothing of my lord. 
   You cannot imagine the suffering he has had to endure\prikker and the burden he still bears.} 
 
 I can use her commentary to give insight into \ps{\Ishnaruchaefir} personality, while keeping him aloof and \trope{Badass}{badass}. If he had do say these things himself, it would come off as whining, \trope{Wangst}{Wangst} and \trope{Spikeification}{Spikeification}. 
@@ -4127,6 +4141,13 @@ He proved it in \hr{Carzain shows off his game}{one scene in \emph{\TheKenosis}}
 
 Whenever Carzain failed at something, he would often tell himself: 
 \tho{Bah. Who needs X? I get laid.}
+
+
+
+
+
+\subsubsection{Usurer}
+Carzain knew a spell to summon a \hr{usurer}\dash a \daemon that could heal and strengthen him and feed on his slain foes. 
 
 
 
