--- a/Characters/OphidianCharacters.tex
+++ b/Characters/OphidianCharacters.tex
@@ -2752,7 +2752,7 @@ Older sister of \Tentocoth, cousin of \Rathyon.
 
 
 
-\section[Tyarith Xzai-Rasshana]{\TyarithXserasshana}
+\section[Dzairith Tyrasshana]{\TyarithXserasshana}
 \target{Tiamat}
 \index{\TyarithXserasshana}
 \TyarithXserasshana{} was a lover of \Sethicus and one the very first \dragons. 
