--- a/Characters/ResphanCharacters.tex
+++ b/Characters/ResphanCharacters.tex
@@ -3947,7 +3947,7 @@ She became the first \hr{Neo-Resphan}{\neoresphan}\dash mightier than a \sathari
 
 
 \subsubsection{Death}
-Saduraid led an attack against \Secherdamon and \hr{Secherdamon's invention}{his great invention}. 
+Saduraid led an attack against \Secherdamon and {his great invention}. 
 She and her monstrous hordes slew several of \Secherdamon's beloved fellow \dragons.
 Eventually \Secherdamon slew Saduraid. 
 
