--- a/Commands.tex
+++ b/Commands.tex
@@ -4085,9 +4085,10 @@
 % Tiamat, the terrible Dragon Mother. 
 \newcommand{\Tiamat}                      {T\ydiphthong rasshana\xspace}
 \newcommand{\TyarithXserasshana}          {\Tyarith \Xserasshana}
-\newcommand{\Tyarith}                     {Xzairith\xspace}
+\newcommand{\Tyarith}                     {Dzairith\xspace}
 \newcommand{\Xserasshana}                 {\Tiamat}
 \newcommand{\Kserasshana}                 {\Tiamat}
+\newcommand{\Tyrasshana}                  {\Tiamat}
 
 % Typhon, the Dragon god of war. 
 \newcommand{\Typhon}                      {T\ydiphthong phon\xspace}
