--- a/Story/AfterSethicus.tex
+++ b/Story/AfterSethicus.tex
@@ -167,6 +167,32 @@ Two branches of \ophidians{} survived:
 
 
 
+\subsection{\Nyx, the Megalopolis}
+The \ophidians discovered \hr{Nyx}{\Nyx} shortly after the \firstbanewar.
+There were certain \hr{Portals to Nyx}{portals which allowed travel to \Nyx}.
+
+The \ophidians called it \emph{the Megalopolis}. 
+(\quo{\Nyx} is a \resphan name.)
+They knew it was somehow connected to \Erebos.
+At first they feared the place because they worried that the \banes might somehow return via this Realm. 
+Moreover, horrid creatures dwelt there\dash such as the dread \umbrae.
+
+But these horrid creatures never tried to leave \Nyx, and there were no signs of the \banes. 
+So after several centuries of relative peace, the \ophidians gradually stopped worrying. 
+
+The \ophidians established colonies in \Nyx, for the Realm was rich in exotic resources and energies. 
+
+They did not meet the \resphain at first, for they didn't exist at first. 
+\hr{Ophidians meet Resphain}{The two races met thousands of years later}. 
+
+
+
+
+
+
+
+
+
 \subsection{\QuilJaaran}
 The \quiljaaran{} kept on dwelling in the desolate and crumbling \ophidian{} cities. 
 Each \quiljaar{} was usually able to keep a few dozen servants or slaves (mostly \loculs, sometimes \cregorrs{} and \nephilim). 
