--- a/Story/Merkyrah.tex
+++ b/Story/Merkyrah.tex
@@ -13,6 +13,58 @@ This book takes place in \hr{Merkyrah}{\Merkyrah}.
 
 
 
+\section{\Resphain and \Ophidians}
+
+
+
+
+
+
+
+
+
+\subsection{\Ophidians and \resphain meet}
+\target{Ophidians meet Resphain}
+The \ophidians \hr{Ophidians discover Nyx}{had discovered \Nyx} long before the \resphain were created.
+But they had only explored a small part of \Nyx.
+The place where the \resphain originated was far away from the regions colonized by \ophidians.
+So at first they knew nothing of each other. 
+
+After the \resphain arose, they quickly spread and began to build their civilization(s). 
+After many centuries, \resphan explorers encountered \ophidians. 
+Politics and dealings began between the two races. 
+There were many small wars and skirmishes, and also peace. 
+
+
+
+
+
+
+
+
+
+\subsection{\Ophidian/\resphan coexistence}
+The two races would coexist for thousands of years\dash fighting, trading, competing and cooperating. 
+\Resphan colonies would be founded in the Realms of \Azmith. 
+\Resphan allies and mercenaries would fight alongside \ophidians in \ophidian wars. 
+
+The \ophidians were still somewhat xenophobic, so no great \resphan empires were allowed to flourish in \Azmith.
+When a \resphan-dominated nation or other organization grew powerful enough to be a threat, the \ophidians would band together and destroy the \resphan upstarts lest they usurp the \ophidian homeworld. 
+Eventually, many \resphain grew to resent the \ophidians for this oppression. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 \section{The Truth (\yds{Delving})}
