--- a/Story/OphidianCivilization.tex
+++ b/Story/OphidianCivilization.tex
@@ -189,6 +189,7 @@ They went on to form great empires and develop marvelous science and sorcery.
 \subsubsection{Metabolism}
 \target{Ophidians evolved}
 \target{Ophidians half warm-blooded}
+\target{metabolism control}
 \index{metabolism control}
 \index{warm-blooded}
 \index{cold-blooded}
@@ -279,6 +280,30 @@ They were now a mighty race of scientists and sorcerers.
 
 They grew to become the dominant civilization. 
 
+
+
+
+
+\subsubsection{Paragons/Imperials}
+The \ophidians were individually too weak to challenge the elder races. 
+But they had social behaviour, and they had their psionic powers. 
+Gradually they learned to take pack cooperation a step further. 
+They learned to lend the pack's collective mental power to the leader, allowing the leader to grow much more powerful than an average \ophidian by drawing upon the essence of his pack.
+These leaders became known as \emph{paragons}, and their supporters as \emph{vassals}.
+This was a form of \emph{\nexus}, with the paragon as an \emph{\apex}. 
+In time, the \ophidians also learned that a paragon could act in turn as vassal to a greater paragon. 
+
+The \ophidians discovered that\dash at great cost\dash they could imbue an egg with extra essence and thus breed a prodigy who could wield paragon power to greater effect than a regular \ophidian. 
+These \quo{born paragons} gradually became a superior subrace, a ruling caste. 
+They came to be known as \hr{Ophidian Imperial}{\emph{Imperials}}.
+
+The \ophidian Imperials \hr{Ophidian immortality}{achieved immortality}. 
+
+
+
+
+
+\subsubsection{Terrible elder world}
 They were the most recent in a long line of civilizations on the planet. 
 Almost like \humans in the Cthulhu Mythos. 
 
@@ -287,13 +312,6 @@ Compare to the people of Mu in \cite{HPLovecraft:OutoftheAeons}, who fear Ghatan
 There were mountains and great basaltic pillars wherein dwelt the horrid \hs{flying polyps}. 
 There were great areas that the \ophidians dreaded and learned to stay away from.
 Even in their time of greatness they feared these relics of an elder age. 
-
-
-
-
-
-\subsubsection{Immortal Imperials}
-The \ophidian ruling class, the \hr{Ophidian Imperial}{Imperials}, developed immortality.
 
 
 
