--- a/Story/SethicusReign.tex
+++ b/Story/SethicusReign.tex
@@ -77,7 +77,7 @@ The \wylde spread uncontrollably.
 
 
 
-\subsection[Tiamat as a Dark Messiah]{\Tiamat{} as a Dark Messiah}
+\subsection[Tyrasshana as a Dark Messiah]{\Tiamat{} as a Dark Messiah}
 \Tiamat{} is a \trope{DarkMessiah}{Dark Messiah} kind of character. 
 At first she wanted to bring enlightenment to her people. 
 But the awful knowledge she discovered and absorbed drove her mad and caused her ideals to became twisted. 
