--- a/Story/SethicusRise.tex
+++ b/Story/SethicusRise.tex
@@ -108,7 +108,13 @@ One of \Sethicus's more important allies was \hr{Tiamat}{\Tiamat}.
 Originally she was his assistant and servant.
 She followed him around on his journeys and learned much. 
 
-She later became \Sethicus' lover, and they had a son, \Nexagglachel. 
+
+
+
+
+\subsubsection{\Sethicus's motivation}
+\Sethicus wanted to make the world a better place, lift his people out of barbaric warfare, oppression of Worms and all-round suffering.
+Later his priorities changed. 
 
 
 
@@ -870,11 +876,13 @@ His opponents fought for their materialistic, atheistic beliefs and saw \Sethicu
 \subsection{\Nexagglachel and his brothers}
 \Nexagglachel and his brothers were alive at this time. 
 Their parents\dash weakened after having produced three powerful sons\dash perished in the last great war. 
+The three sons were powerful and accomplished adults by the time \Valcan and \Dzairith made their discoveries. 
+
 \Raemyth (later \Nexagglachel) was now a lord. 
 He was a warlord with dreams of kingship and conquest. 
 
 Quessanth (later \Iscrafel) fought for his brother as a champion.
-He was a martial artist who hungered for glory and recognition. 
+He was a martial artist and warrior-mage who hungered for glory and recognition. 
 
 Irocas (later \Secherdamon) was a gentle artist and composer. 
 He desired only be allowed to produce and perfect his art for its own sake. 
