--- a/World/Magic.tex
+++ b/World/Magic.tex
@@ -1323,6 +1323,45 @@ The \firesalamander was the ultimate manifestation of \hr{Ruin Satha fire magic}
 
 
 
+\subsubsection{Usurer}
+\target{Usurer}
+\target{usurer}
+\index{usurer}
+A \quo{usurer} was a type of \daemon that could be summoned by sorcerers.
+The usurer would grant its host increased strength and endurance and heal his wounds (even serious wounds) for a time.
+In return, the usurer would demand to feed at a later time. 
+Typically, the mage would feed his slain or crippled foes to the usurer. 
+
+If the sorcerer failed to provide sacrifices in time to feed the usurer, the usurer would turn on him and drain his vital energy. 
+A usurer needed to take \emph{more} than it gave, so this could easily kill the sorcerer or leave him dangerously weakened. 
+
+A weak mage could keep a usurer at bay for perhaps 10-20 minutes. 
+A stronger mage could buy more time. 
+About an hour was the absolute maximum. 
+
+If a usurer turned on a mage, he could try to repel it or even kill it, but this was difficult and very dangerous. 
+In order to bond with the usurer, one had to lower his guard and allow it almost full access to his vital system. 
+If the usurer detected that the mage was trying to turn on it while it was still attached, it would try to kill him\dash and it often succeeded.
+It was ill-advised to attempt to cheat a usurer. 
+
+An enemy mage can detect that someone has a usurer attached. 
+Enemy mages may be able to dispel or kill the usurer. 
+If an enemy manages to wound the usurer, it may begin to feed on its host to save itself, or it may detach itself and flee. 
+
+Some usurers are larger and stronger than others. 
+A large usurer can provide more energy and heal more serious wounds than a small usurer, but it comes at a price.
+As a rule of thumb, the amount of energy that the usurer requires in return is always roughly proportial to the amount of energy it has \quo{lent out}. 
+
+A more powerful mage can summon a more powerful usurer, but this is always somewhat random.
+Usurers are not a common race, so you may not always be able to summon one\dash and you cannot always pick and choose.  
+Once a mage has bonded with an individual usurer once, the usurer will remember him and is likely to answer his call again at a later time. 
+But summoning an individual usurer is never certain. 
+It might be far away, or busy, or it may have died in the meantime. 
+
+
+
+
+
 \subsubsection{Wraithworms}
 There were spells that summoned wraithworms. 
 Wraithworms were \daemons that took on the semblance of a skeletal snake. 
