--- a/World/OphidianRaces.tex
+++ b/World/OphidianRaces.tex
@@ -1720,14 +1720,20 @@ At the time of the \thirdbanewar there were 1000-3000 \ophidians worldwide.
 
 \subsubsection{Immortality}
 \target{Ophidian immortality}
-\Ophidians{} are immortal. They shed their skin periodically to renew their youth and rebirth themselves into new life. 
-The shed skin of an \ophidian{} may have mystic power. 
+The \ophidian \hs{Imperials} learned to focus \nexus essence inward to strengthen and heal their bodies, achieving long lives and even immortality. 
+They shed their skin periodically to renew their youth and rebirth themselves into new life. 
 
-\hr{Draconic immortality}{\Draconic{} immortality} is different. 
+The shed skin of an \ophidian{} contained some valuable essence. 
+Usually the \ophidians would save the skins and distill the essence from them. 
+However, this was a difficult process that required a laboratory. 
+Occasionally the skins would be lost or stolen, and others would gain access to the essence stored in the skins. 
+
+A regular \ophidian, not born to paragon-hood, can also heal his body, but his soul is not strong enough to do this effectively, so it requires a \emph{lot} of energy, and it gets more and more expensive as he grows older and accumulates \hs{decrepity}. 
+An Imperial is stronger and more resilient by nature and is much more resistant to decrepity. 
+
+\hr{Draconic immortality}{\Draconic{} immortality} is different from this. 
 
 See also the section on \hr{Kinds of immortality}{different kinds of immortality}. 
-
-Perhaps only the nobility were immortal. 
 
 Perhaps their immortality is psionic and not \hr{sorcery}{sorcerous} in nature. 
 
