--- a/World/Realms.tex
+++ b/World/Realms.tex
@@ -1806,6 +1806,19 @@ Therefore, \Nyx{} feels barren and dead to some.
 
 
 
+\subsection{Portals to \Azmith}
+\target{Portals to Nyx}
+There were regions in \Nyx where the Realm was close to that of \Azmith. 
+These regions functioned as portals where it was possible to cross over between the two Realms. 
+
+
+
+
+
+
+
+
+
 \subsection{Sky}
 \target{Sky in Nyx}
 The sky above \Nyx{} similar to that above \Azmith.
