--- a/World/Universe.tex
+++ b/World/Universe.tex
@@ -2637,7 +2637,34 @@ Mortals do not step out of their body unscathed when they die. They are closely 
 
 
 
+\subsection{Decrepity}
+\target{Decrepity}
+\target{decrepity}
+\index{decrepity}
+\index{soul!decrepity}
+Most immortals were able to heal all kinds of wounds to their bodies. 
+Almost. 
+But some wounds could not be healed. 
+Sometimes an especially traumatic injury would leave a psychological scar. 
+This spiritual scar would show up in the body.
+As long as the inner wound remained, the body would continue to show the wound. 
+On the external level, the wound could sometimes be healed \emph{temporarily}\dash or at least concealed.
+But only temporarily.
+The body would always tend to decay back to the state of the soul within. 
+Such a spiritual wound is called a \emph{decrepity}. 
+
+
+
+
+
+
+
+
+
 \subsection{Immortality}
+\target{Immortality}
+\target{immortality}
+\target{immortal}
 \index{immortality}
 \index{soul!immortal}
 
@@ -2646,9 +2673,6 @@ Mortals do not step out of their body unscathed when they die. They are closely 
 
 
 \subsubsection{Degrees of immortality}
-\target{Immortality}
-\target{immortality}
-\target{immortal}
 \target{True immortal}
 \target{True Immortals}
 \target{True Immortality}
