Removed a bunch from the end

--- a/Appendix/Languages.tex
+++ b/Appendix/Languages.tex
@@ -148,18 +148,28 @@ See the pronunciation tables.
 
 
 
-\subsection{\Draconic}
+\subsection{Talaac (\Draconic)}
 \target{Draconic language}
-The \Draconic{} tongue is the tongue spoken by \dragons{} and the official language of Irokas. 
-
-The \quo{pure} version of the language is called Kingstongue. Kingstongue is a magical language, with almost every word and phrase being a spell of some sort. Kingstongue has remained mostly unchanged for many thousands of years because accurate pronunciation and phrasing are required for the spells to work. Chaos magic is very much based on Kingstongue. 
-
-Kingstongue is an extremely complex language to learn, as the grammar is very cryptic. Even for \dragons{}, whose brains are superior to those of humanoids and pick up languages easier, it takes hundreds of years to learn correct Kingstongue. \Rachyth{} pick up Kingstongue reasonably well, but most humanoids never learn to construct more than the simplest sentences and spells. A good command of Kingstongue is a sign of status among \dragons{}. 
+\target{Talaac}
+\index{Talaac}
+The language spoken by most \dragons and many \ophidians. 
 
 
 
 \meta{%
-  Not meant to resemble any real-world language.} 
+  Meant to resemble the \quo{Enochian} language used in astrologer John Dee's writing.} 
+
+
+
+
+
+\subsubsection{Classical Talaac}
+\target{Classical Talaac}
+\index{Classical Talaac}
+\index{Talaac!Classical Talaac}
+Classical Talaac was the language originally spoken by \hr{Sethicus}.
+Millennia later, a similar language was still spoken by many \ophidians. 
+This \quo{official} dialect of the language was still called Classical Talaac (to differentiate it from \hr{Mystic Talaac} and \hr{Vulgar Talaac}).
 
 
 
@@ -167,9 +177,19 @@ Kingstongue is an extremely complex language to learn, as the grammar is very cr
 
 \subsubsection{\TrueDraconic}
 \target{True Draconic}
-The formal, magical language of the \dragons, from which regular \Draconic{} (used for everyday communication) is derived. 
+\target{Mystic Talaac}
+\index{\TrueDraconic}
+\index{Mystic Talaac}
+\index{Talaac!Mystic Talaac}
+The formal, magical language of the \dragons and \ophidians.
+Also called \emph{Mystic Talaac}. 
+It was derived from \emph{Classical Talaac}, the language originally spoken by \hr{Sethicus}. 
 
-\TrueDraconic{} is based on \hr{Ophidians discover spellwords}{a system of spellwords discovered by the \ophidians}. 
+Mystic Talaac was based on \hr{Ophidians discover spellwords}{a system of spellwords discovered by the \ophidians}. 
+
+Mystic Talaac is an extremely complex language to learn, as the grammar is very cryptic. 
+Even for \dragons{}, whose brains are superior to those of humanoids and pick up languages easier, it takes hundreds of years to learn correct Mystic Talaac. 
+A good command of the language is a sign of status among \dragons{}. 
 
 \target{True Draconic costs sanity}
 Speaking \TrueDraconic was a sorcerous thing. 
@@ -189,9 +209,10 @@ Even formidable mortals like \Criseis only spoke \TrueDraconic when they must.
 
 
 \subsubsection{\CommonDraconic}
-\quo{\CommonDraconic} is the collective term for various simplified, degenerated dialects of the language. 
-Most humanoid denizens of Irokas speak \CommonDraconic, although most will understand Kingstongue. 
-There are many variants of \CommonDraconic, some so different from each other (and from Kingstongue) that they are barely recognizable. 
+\target{Vulgar Talaac}
+\emph{Vulgar Talaac}, also called \emph{\CommonDraconic}, was the collective term for various simplified, degenerated dialects of Talaac. 
+Many mortal humanoids spoke it.
+There were many variants of Vulgar Talaac, not all mutually intelligible. 
 
 The full name for the language is \emph{Gemaltha N\^udrach Ruishaan} meaning \quo{Draconic daily speech}.
 Its common name is \emph{Ruishaan} meaning \quo{daily}.
