--- a/Characters/OphidianCharacters.tex
+++ b/Characters/OphidianCharacters.tex
@@ -2894,11 +2894,9 @@ Only three of her children survived to go into \hs{Durance}:
 \subsubsection{\Dweomer status}
 \target{Tiamat dweomer}
 Eventually \Tiamat became an immortal god. 
-Some believed that she became a \dweomer unto herself, a parasitic mother whose lifeforce was liked to the entire \draconian race. 
+Some believed that she became a \dweomer unto herself, a parasitic mother whose lifeforce was linked to the entire \draconian race. 
 All souls that the \dragons consumed eventually passed to \Tiamat.
 Thus she grew ever stronger in her nightmare prison beyond reality. 
-
-After the exodus from \Miith, she \hr{Tiamat returns}{returned to haunt the \dragons}.
 
 
 
@@ -3083,10 +3081,9 @@ Compare to Adam Kadmon in \Cabbalist theory (whose body contains the ten \sephir
 
 
 \subsection{Name}
-\quo{\Valcan} was his egg-name. 
-\quo{\Sethicus} was his manhood name. 
+His original name was \quo{Valcan of Tan-Izul}. 
 
-Later, \hr{Vizsherioch}{\Vizsherioch} \hr{Vizsherioch takes the name Sethicus}{took the name \quo{\Sethicus}} after him. 
+When he became a \dragon, he took the name \emph{\Sethicus}. 
 
 To the \Ortaicans, \Sethicus was known as the \taortha \hr{Settras}{\Settras}.
 
@@ -3983,10 +3980,6 @@ This was impossible at the time of the \SecondShrouding{}, but \Secherdamon, bei
 \target{Vizsherioch's XS blood}
 \Vizsherioch{} has even more \xsic{} blood than his father, and suffers even more from their inherent weaknesses. 
 He is prone to the \hr{XS slumber}{\xsic{} slumber}. 
-
-But he also has \bane{} blood and can draw on \Erebean{} power to counter these ill effects. But when \hr{Daggerrain falls}{\Daggerrain{} falls}, his connection to \Erebos{} fails and \hr{Vizsherioch falls asleep}{he falls prey to the \xsic{} slumber}. 
-
-On the other hand, his \xsic{} nature might make him truly immortal. 
 
 
 
