--- a/Hyphenation.tex
+++ b/Hyphenation.tex
@@ -27,7 +27,11 @@
   la-by-rinth-ine
   lan-guage 
   me-tab-o-lism
+  miith
   my-tho-lo-gy
+  myst-raacht
+  myst-raacht
+  m\"yst-raacht
   Nas-shi-kerr
   Nex-agg-la-chel
   Nith\rq dor-nazsh
