--- a/MithFull.tex
+++ b/MithFull.tex
@@ -78,6 +78,7 @@
       \input{Story/Sentinels01Notes} 
       \input{Story/Sentinels02Notes} 
       \input{Story/Sentinels03Notes} 
+      \input{Story/Sentinels04Notes} 
     \end{comment}
 
 
