--- a/Story/AfterSethicus.tex
+++ b/Story/AfterSethicus.tex
@@ -168,6 +168,7 @@ Two branches of \ophidians{} survived:
 
 
 \subsection{\Nyx, the Megalopolis}
+\target{Ophidians discover Nyx}
 The \ophidians discovered \hr{Nyx}{\Nyx} shortly after the \firstbanewar.
 There were certain \hr{Portals to Nyx}{portals which allowed travel to \Nyx}.
 
