--- a/Story/OphidianCivilization.tex
+++ b/Story/OphidianCivilization.tex
@@ -521,3 +521,118 @@ They abandoned the plan to settle Visha.
 
 
 
+
+
+
+
+\subsection{Ramarxes and the Concord}
+\target{Concord}
+\index{Concord}
+\hs{Ramarxes} was a genius \caisith inventor and entrepreneur. 
+His great invention was the \emph{Concord}. 
+The Concord was a telepathic union allowing all participants to communicate and remain in contact.
+The Concord also functioned as a global repository of knowledge and data\dash a telepathic internet. 
+A universal \caisith supermind. 
+
+When the Concord was invented, it was quickly adopted and spread across the world. 
+It strengthened the \caisith civilization.
+It allowed them to build stronger \nexuses, so the paragon leaders could grow stronger. 
+Ramarxes, as the inventor of the Concord, became the most famous and popular \caisith alive\dash perhaps ever. 
+
+
+
+
+
+\subsubsection{New Concord}
+Ramarxes kept developing and refining the technology of the Concord. 
+He hungered for personal power and greatness, as did any ambitious \caisith. 
+He wanted to be the greatest. 
+So he developed \quo{deeper} Concord contracts, which individuals could then enter into (like license agreements). 
+This enhanced set of Concord contracts was called the New Concord. 
+Gradually, the New Concord became able to extract more and more information from individuals and influence their minds more and more.
+More and more, the New Concord became a tool of mind control. 
+
+The development of the Concord and the New Concord took centuries. 
+
+Ramarxes was not \apex of the entire Concord. 
+(The rest of his people would never willingly agree to make him global \apex.)
+There were other powerful \apexes, and some had a greater pyramid of vassals than Ramarxes did. 
+So Ramarxes did not \emph{look} like the most powerful \caisith in the world.
+But Ramarxes understood the Concord better than any other.
+He knew many tricks and shortcuts.
+So he had a lot of power he could abuse. 
+
+From Ramarxes' perspective, his motives were pure. 
+Ramarxes wanted to conquer the other races in the universe. 
+He wanted the \caisith to rule the universe\dash and he wanted to rule the \caisith.
+He wanted to be the greatest of all, as any self-respecting \caisith would. 
+He wanted to be a god, the incarnation of the soul of the \caisith race and their \hs{dweomer}. 
+
+Gradually Ramarxes began to draw on the resources available to him.
+It dawned on the rest of the population that Ramarxes was growing more powerful.
+By this time the entire \caisith civilization was built around the Concord.
+It was virtually impossible to \quo{opt out}. 
+
+
+
+
+
+\subsubsection{War against Ramarxes}
+More and more, people began to distrust Ramarxes. 
+Other leaders banded together and demanded that Ramarxes relinquish power.
+Ramarxes contended that he was not holding any unlawful power, and that there was nothing to relinquish.
+
+Others began to actively attack Ramarxes and try to force him to relinquish power.
+Ramarxes fought back with the weapons at his disposal. 
+In doing so, Ramarxes \quo{tightened} the New Concord and utilized its potential for mind control. 
+The more Ramarxes fought, the more people began to fear him.
+Battle lines were drawn. 
+Boundaries were crossed.
+It came to war. 
+
+Ramarxes became afraid. 
+Afraid of losing everything he had built.
+Afraid of being destroyed. 
+So he began taking drastic measures.
+He delved into dark sorcery. 
+As the master of the Concord, he had access to vast resources of knowledge, so he was able to reconstruct ancient outlawed sorceries and perfect them further. 
+He descended into darkness. 
+And with his power over the New Concord, he dragged the minds of the \caisith race with him down into darkness. 
+
+Horror reigned. 
+Many \ophidians succumbed to madness\dash and their madness unleashed alien horrors upon the world. 
+
+
+
+
+
+\subsubsection{Fall of Ramarxes}
+Ramarxes' empire was crumbling, and enemies were at his very door, coming to slay him. 
+
+In his desperation, Ramarxes reached out into the great void searching for power.
+He looked to the Umaja Tablets. 
+This drove him mad. 
+
+When his enemies found him, Ramarxes was a wretch. 
+He was in total despair. 
+He laughed madly and made no effort to save himself. 
+They slew him. 
+
+
+
+
+
+\subsubsection{\Sethicus kills Ramarxes}
+\target{Sethicus kills Ramarxes}
+The team of champions sent to slay Ramarxes included Valcan (\hr{Sethicus}{\Sethicus}) and the parents of \Nexagglachel, \Iscrafel and \Secherdamon. 
+Perhaps Valcan delivered the killing blow. 
+
+
+
+
+
+
+
+
+
+
