--- a/Story/SethicusRise.tex
+++ b/Story/SethicusRise.tex
@@ -42,20 +42,6 @@ He wanted to seize power and achieve \quo{great things} (whatever that meant).
 
 
 
-\subsection{\Sethicus kills Ramarxes}
-\target{Sethicus kills Ramarxes}
-\hs{Ramarxes} was a great \caisith sorcerer and heretic.
-He wanted to be a god, the incarnation of the soul of the \caisith race and their \hs{dweomer}. 
-\Sethicus slew Ramarxes, took over leadership of his cult and eventually became a god. 
-
-
-
-
-
-
-
-
-
 \subsection{Technology and \Sethicus's innovation}
 \target{Sethicus brought innovation}
 When the \dragons were created, the \ophidians had only begun to build an \hs{interstellar civilization}. 
@@ -876,7 +862,7 @@ His opponents fought for their materialistic, atheistic beliefs and saw \Sethicu
 \subsection{\Nexagglachel and his brothers}
 \Nexagglachel and his brothers were alive at this time. 
 Their parents\dash weakened after having produced three powerful sons\dash perished in the last great war. 
-The three sons were powerful and accomplished adults by the time \Valcan and \Dzairith made their discoveries. 
+The three sons were powerful and accomplished adults by the time Valcan and \Tyarith made their discoveries. 
 
 \Raemyth (later \Nexagglachel) was now a lord. 
 He was a warlord with dreams of kingship and conquest. 
