--- a/World/OphidianRaces.tex
+++ b/World/OphidianRaces.tex
@@ -1720,7 +1720,7 @@ At the time of the \thirdbanewar there were 1000-3000 \ophidians worldwide.
 
 \subsubsection{Immortality}
 \target{Ophidian immortality}
-The \ophidian \hs{Imperials} learned to focus \nexus essence inward to strengthen and heal their bodies, achieving long lives and even immortality. 
+The \ophidian \hr{Imperial Ophidian}{Imperials} learned to focus \nexus essence inward to strengthen and heal their bodies, achieving long lives and even immortality. 
 They shed their skin periodically to renew their youth and rebirth themselves into new life. 
 
 The shed skin of an \ophidian{} contained some valuable essence. 
