--- a/Characters/MortalCharacters.tex
+++ b/Characters/MortalCharacters.tex
@@ -2637,7 +2637,7 @@ She knew if she tried to think like a \dragon it would destroy her.
 
 \subsubsection{Happiness}
 \Criseis was fairly happy because she had a special talent for inner peace. 
-She said that she had met very few people who had her talent\her \emph{serenity}, as she called it.
+She said that she had met very few people who had her talent\dash her \emph{serenity}, as she called it.
 
 She had read \Sethicus's warnings, and she suspected that the great polymath might have had the talent. 
 But no other \dragon appeared to share it. 
